Add resource files (JSON files) and distribute them with package

--- a/setup.cfg
+++ b/setup.cfg
@@ -48,9 +48,7 @@ install_requires =
     six >= 1.11.0
 
 [options.package_data]
-smile =
-    tests/*/*.json
-    tests/*/*/*.json
+* = *.json
 
 [options.entry_points]
 console_scripts =
