Move helper programs from smile.platform to smile.scripts

--- a/setup.cfg
+++ b/setup.cfg
@@ -52,6 +52,6 @@ install_requires =
 
 [options.entry_points]
 console_scripts =
-    smile_analyze = smile.platform.smile_analyze:main
-    smile_dump_json = smile.platform.smile_dump_json:main
-    smile_simulate = smile.platform.smile_simulate:main
+    smile_analyze = smile.scripts.smile_analyze:main
+    smile_dump_json = smile.scripts.smile_dump_json:main
+    smile_simulate = smile.scripts.smile_simulate:main
