--- a/smile/resources/simulations/basic_area/analyze_configuration.json
+++ b/smile/resources/simulations/basic_area/analyze_configuration.json
@@ -1,5 +1,5 @@
 {
   "area": {
-    "file": "smile/simulations/basic_area/area.json"
+    "file": "resource:simulations/basic_area/area.json"
   }
 }
