Use pandas for storing final analysis results

--- a/setup.cfg
+++ b/setup.cfg
@@ -46,6 +46,7 @@ install_requires =
     scipy >= 1.1.0
     Shapely >= 1.6.4.post2
     six >= 1.11.0
+    pandas >= 0.23.4
 
 [options.package_data]
 * = *.json
